# LocalSplits

./: .gitignore  CMakeLists.txt  Main.qml  Resources.qrc  main.cpp  timer.cpp  timer.h
Components/AboutPopup/: AboutPopup.qml  qmldir
Components/DraggableRow/: DragDelegate.qml  DraggableRow.qml  qmldir
Components/EditableLabel/: EditableLabel.qml  qmldir
Components/Fonts/: OpenSans.qml  qmldir
Components/GrabHandle/: GrabHandle.qml  qmldir
Components/Split/: split.cpp  split.h  splititem.h  splitmodel.cpp  splitmodel.h
Components/SplitFooterButton/: SplitFooterButton.qml  qmldir
Components/SplitLayoutParsing/: layoutparser.cpp  layoutparser.h  segmenttime.h  splitattempt.h  splitlayout.h  splitmetadata.h  splitplatform.h  splitsegment.h  splittime.h  timemethod.h
Components/SplitList/: SplitList.qml  qmldir  splitlist.cpp  splitlist.h  splitlistdata.cpp  splitlistdata.h
Components/SplitRow/: SplitRow.qml  qmldir  splitrowmodel.cpp  splitrowmodel.h
Components/SplitsMenuBar/: SplitsMenu.qml  SplitsMenuBar.qml  SplitsMenuItem.qml  qmldir
Components/Timer/: timer.cpp  timer.h
tests/: testLayout.lss
